--- a/Node2/bootstrap/package.json
+++ b/Node2/bootstrap/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.1",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.13.3",
+    "bluebird": "^2.10.1",
+    "body-parser": "^1.14.0",
     "bookshelf": "^0.8.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
     "cors": "^2.7.1",
-    "express": "*",
+    "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
     "express-session": "^1.11.3",
     "hbs": "*",
     "knex": "^0.8.6",
